[gd_scene load_steps=12 format=3 uid="uid://chbjox8nn5cvg"]

[ext_resource type="Script" path="res://Objects/Gameplay/Player.gd" id="1_yrlnl"]
[ext_resource type="Texture2D" uid="uid://ctrtpjxxcf6ea" path="res://Sprites/Player/sheet_beetle_silly-QuadHD-beetle_silly(1).png" id="3_kayf7"]
[ext_resource type="Script" path="res://Objects/Gameplay/ScreenShake.gd" id="3_n3uq4"]
[ext_resource type="PackedScene" uid="uid://6e2h6exk7447" path="res://Objects/Gameplay/weapon.tscn" id="3_pcl6h"]
[ext_resource type="AudioStream" uid="uid://b55ygk67h30me" path="res://Audio/Beetle Game_AutoRifle v.2 MASTER.mp3" id="5_1lexl"]
[ext_resource type="PackedScene" uid="uid://u7ujf1rk1yi3" path="res://Components/HitBoxComponent.tscn" id="5_fhxqj"]
[ext_resource type="PackedScene" uid="uid://wb7i7fke0ykf" path="res://Components/health_component.tscn" id="7_mplm1"]
[ext_resource type="Texture2D" uid="uid://ckv7fyo2h1nw6" path="res://Sprites/Backgrounds/lighttexture2.png" id="8_sn081"]
[ext_resource type="AudioStream" uid="uid://dwsgjx36n76b0" path="res://Audio/BeetleGame_Beetle_Damaged v.2 MASTER.mp3" id="9_ninbk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ra885"]
radius = 8.00694

[sub_resource type="CircleShape2D" id="CircleShape2D_ftsfj"]
radius = 10.05

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_mask = 0
script = ExtResource("1_yrlnl")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.54902, 0.54902, 0.54902, 1)
scale = Vector2(-0.016, -0.016)
texture = ExtResource("3_kayf7")
region_enabled = true
region_rect = Rect2(2883.48, 714.472, 1265.28, 1233.98)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ra885")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("3_n3uq4")
randomStrength = 15.0
shakeFade = 2.0

[node name="Center" type="Node2D" parent="."]

[node name="Weapon" parent="Center" node_paths=PackedStringArray("player") instance=ExtResource("3_pcl6h")]
position = Vector2(18.073, 0)
scale = Vector2(0.08, 0.08)
bullet_speed = 1000.0
player = NodePath("../..")
Recoil = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Center/Weapon"]
stream = ExtResource("5_1lexl")

[node name="Sprite2D" type="Sprite2D" parent="Center"]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
z_index = -1
position = Vector2(3.66667, 0.333334)
rotation = 1.5708
scale = Vector2(0.019, 0.019)
texture = ExtResource("3_kayf7")
region_enabled = true
region_rect = Rect2(813.993, 1902.98, 1655.71, 2077.24)

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("5_fhxqj")]
collision_mask = 0
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CircleShape2D_ftsfj")

[node name="HealthComponent" parent="." instance=ExtResource("7_mplm1")]
Max_Health = 4

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.690196, 0.615686, 0.945098, 1)
energy = 5.16
texture = ExtResource("8_sn081")

[node name="Damage Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ninbk")

[connection signal="onDeath" from="HealthComponent" to="." method="_on_health_component_on_death"]
